package at.spengergasse.cooking.recipes.domain;

public enum Difficulty {
    BEGINNER,
    ADVANCED,
    PRO,
    CHEF
}
