package at.spengergasse.cooking.recipes.domain;

public enum Unit {
    GRAMS,
    MILLILITER,
    TABLESPOONS,
    TEASPOONS,
    PACK,
    PINCH
}
